// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note component renders the UI as expected when a match prop is passed 1`] = `
<Note
  match={
    Object {
      "params": Object {
        "noteId": "cbc787a0-ffaf-11e8-8eb2-f2801f1b9fd1",
      },
    }
  }
>
  <section
    className="notes"
  >
    <h2>
      Dogs
    </h2>
    <p>
      Last modified on: Wed Jan 02 2019 19:00:00 GMT-0500 (Eastern Standard Time)
    </p>
    <button
      onClick={[Function]}
      type="button"
    >
      Delete Note
    </button>
    <p>
      Corporis accusamus placeat quas non voluptas. Harum fugit molestias qui. Velit ex animi reiciendis quasi. Suscipit totam delectus ut voluptas aut qui rerum. Non veniam eius molestiae rerum quam.
 
Unde qui aperiam praesentium alias. Aut temporibus id quidem recusandae voluptatem ut eum. Consequatur asperiores et in quisquam corporis maxime dolorem soluta. Et officiis id est quia sunt qui iste reiciendis saepe. Ut aut doloribus minus non nisi vel corporis. Veritatis mollitia et molestias voluptas neque aspernatur reprehenderit.
 
Maxime aut reprehenderit mollitia quia eos sit fugiat exercitationem. Minima dolore soluta. Quidem fuga ut sit voluptas nihil sunt aliquam dignissimos. Ex autem nemo quisquam voluptas consequuntur et necessitatibus minima velit. Consequatur quia quis tempora minima. Aut qui dolor et dignissimos ut repellat quas ad.
    </p>
  </section>
</Note>
`;

exports[`Note component renders the UI as expected when no match prop is passed 1`] = `
<Note
  match={
    Object {
      "params": Object {
        "noteId": "",
      },
    }
  }
>
  <section
    className="notes"
  >
    <h2>
      Error
    </h2>
    <p>
      Could not load note.  Check your connection and reload the page.
    </p>
  </section>
</Note>
`;
